# python-docx-redline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  marketplace.json  mkdocs.yml  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: plugin.json
.github/workflows/: docs.yml
docs/: API_FIND_ALL.md  CODE_REVIEW_REPORT.md  CONTEXT_AWARENESS_GUIDE.md  DOCTREE_SPEC.md  ERIC_WHITE_ALGORITHM.md  FORMAT_TRACKING_PLAN.md  HYPERLINK_API.md  IMPLEMENTATION_NOTES.md  ISSUE_DELETE_COMMENTS_ORPHANS.md  ISSUE_INSERT_BEFORE_PARAMETER.md  ISSUE_SMART_QUOTES_SEARCH.md  ISSUE_TEXT_SEARCH_WITH_WHITESPACE.md  LAYOUT_API.md  MINIMAL_EDITING_PLAN.md  OOXML_MOVE_TRACKING_RESEARCH.md  PROPOSED_API.md  PROPOSED_API_README.md  QUICK_REFERENCE.md  REFACTOR_PLAN.md  ROADMAP.md  STYLE_MANAGEMENT.md  TESTING.md  TEXT_EXPORT_SPEC.md  WORD_ADDIN_SPEC.md  getting-started.md  index.md
docs/feature_requests/: 003_occurrence_parameter.md  004_batch_mode_partial_success.md  005_fuzzy_matching.md  010_criticmarkup_roundtrip.md  011_pptx_redline_spinoff.md
docs/internal/: FUTURE_TRACKED_CHANGE_IMPROVEMENTS.md  claude-code-plugins.md
docs/internal/feature_requests/: 001_scoped_replacements.md  002_find_all_preview.md
docs/internal/issues/: ISSUE_CHAINED_EDITS_ON_TRACKED_CHANGES.md  ISSUE_CUSTOMXML_CASE_SENSITIVITY.md  ISSUE_DELETE_PARAGRAPH_LEAVES_EMPTY_LINE.md  ISSUE_TEXT_SEARCH_WITH_WHITESPACE.md
docs/internal/planning/: CROSS_REFERENCE_API_SPEC.md  CROSS_REFERENCE_DEV_PLAN.md  CROSS_REFERENCE_ISSUES.md  FEATURE_REQUEST_CONTEXT_AWARENESS.md  IMPLEMENTATION_NOTES.md  TOC_API_SPEC.md
docs/internal/research/: DOCUMENT_DIFF_ANALYSIS.md  OOXML_MOVE_TRACKING_RESEARCH.md
docs/issues/: ISSUE_CURLY_QUOTE_PYTHON_SYNTAX.md  ISSUE_CUSTOMXML_CASE_SENSITIVITY.md  ISSUE_INSERT_TRACKED_RETURNS_NONE.md  delete_ref_empty_paragraphs_fix.md  delete_tracked_partial_deletion_in_tables.md  footnote_silent_replacement_not_working.md
docs/plans/: untracked-editing-implementation.md
docs/user-guide/: advanced.md  basic-operations.md  batch-operations.md  formatting.md  structural-ops.md  viewing-content.md
docs/user_feedback/: 2025-12-29-law-review-redlining-session.md  2025-12-30-delete-ref-leaves-empty-paragraphs.md  2025-12-30-validation-error-after-many-deletions.md  reproduce_nested_del_bug.py
examples/: batch_processing.py  citation_updates.yaml  find_all_example.py  scope_examples.py  simple_edits.yaml  surgical_edits.yaml
office-bridge/: .gitignore  SKILL.md  install.sh  package-lock.json  package.json  server.sh  tsconfig.json
office-bridge/addins/excel/: manifest.xml  package.json  tsconfig.json
office-bridge/addins/outlook/: manifest.xml  package-lock.json  package.json
office-bridge/addins/powerpoint/: manifest.xml  package-lock.json  package.json
office-bridge/addins/shared/: bridge-client.ts
office-bridge/addins/word/: manifest.xml  package-lock.json  package.json
office-bridge/docs/: MULTI_APP_PLAN.md  MULTI_APP_SPEC.md
office-bridge/docs/ideas/: hyperlinks-ideas.md  selection-ideas.md  styles-ideas.md
office-bridge/references/: excel.md  outlook.md  powerpoint-api.md  powerpoint.md  setup.md  word.md
office-bridge/references/word/: footnotes.md  headers-footers.md  hyperlinks.md  search.md  tables.md  tracked-changes.md
office-bridge/scripts/: start-server.ts
office-bridge/src/: client.ts  index.ts  registry.ts  types.ts
office-bridge/src/accessibility/: builder.ts  changes.ts  editing.ts  index.ts  scope.ts  serializer.ts  types.ts
scripts/: audit_compliance_coverage.py
skills/docx/: SKILL.md  comments.md  criticmarkup.md  cross-references.md  editing.md  hyperlinks.md  install.sh  office-bridge.md  reading.md  styles.md  templating.md  toc.md  tracked-changes.md
skills/docx/design/: SKILL.md  action-headings.md  ai-antipatterns.md  executive-summaries.md
skills/docx/office-bridge/: SKILL.md  comments.md  editing.md  navigation.md  selection.md  setup.md  styles.md  tree-building.md
skills/docx/python/: SKILL.md  accessibility.md  comments.md  creation.md  criticmarkup.md  editing.md  footnotes.md  integration.md  tracked-changes.md
skills/docx/references/: design-principles.md  document-structure.md  industry-styles.md
skills/docx/scripts/: README.md
src/docx_redline/: __init__.py  author.py  compat.py  document.py  errors.py  scope.py  suggestions.py  text_search.py  tracked_xml.py  validation.py  validation_base.py  validation_docx.py
src/docx_redline/models/: __init__.py  comment.py  footnote.py  paragraph.py  (+2 more)
src/python_docx_redline/: __init__.py  cli.py  compat.py  constants.py  content_types.py  criticmarkup.py  document.py  errors.py  export.py  format_builder.py  fuzzy.py  markdown_parser.py  match.py  minimal_diff.py  ooxml_validator.py  package.py  quote_normalization.py  relationships.py  rendering.py  results.py  scope.py  style_templates.py  styles.py  suggestions.py  templating.py  text_search.py  tracked_xml.py  validation.py  validation_base.py  validation_docx.py  validation_redlining.py
tests/: __init__.py  debug_delete_section.py  debug_insert_paragraph.py  test_accessibility_tree.py  test_accessibility_types.py  test_author_identity.py  test_batch_operations.py  test_batch_partial_success.py  test_bookmarks.py  test_bytesio_support.py  test_chained_tracked_edits.py  test_cli.py  test_comments.py  test_compare.py  test_content_types.py  test_context_awareness.py  test_criticmarkup.py  test_cross_reference_accessibility.py  test_cross_references.py  test_delete_comments_fix.py  test_document.py  test_edit_groups.py  test_export.py  test_extended_operations_track.py  test_find_all.py  test_footnotes.py  test_format_tracked.py  test_fuzzy_integration.py  test_fuzzy_matching.py  test_generic_document_api.py  test_headers_footers.py  test_hyperlinks.py  test_image_refs.py  test_images.py  test_insert_before.py  test_integration.py  test_large_docs.py  test_markdown_parser.py  test_markdown_xml_integration.py  test_minimal_diff.py  (+38 more)
tests/fixtures/: create_fixtures.py  simple_document.docx
(+63 files in other folders)
