[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-docx-redline"
version = "0.1.0"
description = "A high-level Python API for editing Word documents with tracked changes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Parker Hancock"},
]
keywords = ["docx", "word", "tracked-changes", "editing", "document-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "lxml>=4.9.0",
    "mistune>=3.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
]

[project.scripts]
docx-redline = "python_docx_redline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/parkerhancock/python-docx-redline"
Repository = "https://github.com/parkerhancock/python-docx-redline"
Documentation = "https://github.com/parkerhancock/python-docx-redline/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/python_docx_redline"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow long lines in test files for XML fixtures
"tests/*.py" = ["E501"]
# Anthropic skill scripts - third-party code, exempt from strict checks
"skills/docx/**/*.py" = ["E501", "E402", "N806", "N802", "N803", "N815"]

[tool.mypy]
python_version = "3.10"
# Relaxed defaults for legacy codebase - strict checking enabled per-module
warn_unused_configs = true
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = false
# Exclude from type checking entirely
exclude = [
    "skills/",
    "src/python_docx_redline/validation",  # Experimental validation scripts
]
# Disable error codes that have many issues in legacy code
disable_error_code = [
    "arg-type",
    "var-annotated",
    "operator",
    "import-untyped",
    "return-value",
    "union-attr",
    "dict-item",
    "assignment",
    "attr-defined",
]

# Strict checking for new/well-typed modules
[[tool.mypy.overrides]]
module = [
    "python_docx_redline.markdown_parser",
    "python_docx_redline.tracked_xml",
    "python_docx_redline.errors",
    "python_docx_redline.text_search",
]
disallow_untyped_defs = true
warn_return_any = true
disable_error_code = []  # Re-enable all checks for these modules

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/python_docx_redline --cov-report=term-missing"
